# spyglass

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-flask.txt  requirements-minimal.txt  requirements-sqlalchemy.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml
adapters/fastapi/: index.html
adapters/flask/: index.html
architecture/architecture/: index.html
databases/sqlalchemy/: index.html
docs/: index.md
docs/adapters/: fastapi.md  flask.md  functions.md  sanic.md
docs/architecture/: architecture.md  data-model.md  deployment.md
docs/databases/: mongodb.md  neo4j.md  pyodbc.md  sqlalchemy.md
docs/exporters/: jsonl.md  otlp.md  prometheus.md
docs/guides/: configuration.md  getting-started.md  installation.md  performance.md  reliability.md  sampling.md  troubleshooting.md
examples/: example_asyc_pipeline.py  example_bench_emitter.py  example_demo_ui.py  example_exporters.py
scripts/: create_docs.sh  create_issues_v0.sh  create_issues_v0_2.sh  create_issues_v0_3.sh  create_issues_v0_4.sh  create_issues_v1_0.sh  create_milestones.sh  create_project_and_add.sh  setup_basics.sh  tag_issues_to_milestones.sh
search/: search_index.json
stylesheets/: extra.css
tests/: test_async_collector.py  test_emitter_and_stats.py  test_exporters.py  test_flask_adapter.py  test_flask_ui.py  test_import.py  test_profile_decorator.py  test_runtime_clock.py  test_runtime_context.py  test_runtime_ids.py  test_sqlalchemy_instrumentation.py
(+30 files in other folders)
